--- a/src/app.html
+++ b/src/app.html
@@ -10,3 +10,7 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
+<script>
+	import '@fontsource/fira-mono';
+</script>
